styles/Slideshow.module.css
.slideshow {
  position: relative;
  display: flex;
  height: 55vh;
  place-content: center;
  place-items: center;
  text-align: center;
}

.image {
  position: absolute;
  margin: auto;
  left: 0;
  right: 0;
  max-width: 95%;
  max-height: 95%;
  transition: opacity 2s ease-in-out;
  box-shadow: 2px 2px 5px black;
}

.caption {
  background-color: rgba(0, 0, 0, 0.3);
  box-shadow: 2px 2px 5px black;
  position: absolute;
  padding: 0em 1em;
  bottom: -1.5em;
  transition: opacity 2s ease-in-out;
}

.hidden {
  opacity: 0;
}

